test/Vehicle/Test/CompileMode/Error/ParsingErrors/resourceGivenBody.vcl
@parameter
epsilon : Rat
epsilon = 0.1